Using WettkampfGruppeJpa-ID we've created instead of creating a new one everytime...